# LRM

./: .env.template  .gitignore  CMakeLists.txt  LICENSE.md  README.md
setup/: docker-compose.yaml  init.sql
src/: context.cpp  context.hpp  database.cpp  database.hpp  environment.cpp  environment.hpp  language.cpp  language.hpp  main.cpp  model.cpp  model.hpp  responses.cpp  responses.hpp  tool.cpp  tool.hpp
src/tools/: describe.hpp  execute.hpp  list.hpp
